adding return card to log (#241)
* fixed cdsservice.java

* updated based on suggestions

* updated based on suggestions

* updated based on suggestions and finished frontend

* added package-lock.json and updated based on suggestions

* added package-lock.json

* added package-lock.json

* changed from setAddCardList to setCardListFromCards

* fixing CdsService.java again

* adding more

* Questionnaire url (#244)

* return questionnaire url instead of id

* add fhir/filepath

* adding more

* fixed cdsservice.java

* updated based on suggestions

* updated based on suggestions

* updated based on suggestions and finished frontend

* added package-lock.json and updated based on suggestions

* added package-lock.json

* added package-lock.json

* changed from setAddCardList to setCardListFromCards

* fixing CdsService.java again

* adding more

* changed CdsSer

* fix tests

* fixed test

* moved everything into if(errorCardOnEmpty)

* fixed inside of if(errorCardOnEmpty)

Co-authored-by: Keeyan <keeyan.ghoreshi@uconn.edu>